--- a/package.json
+++ b/package.json
@@ -1,20 +1,18 @@
 {
-  "name": "diacritic-regex",
+  "name": "fi-di-regex",
   "version": "1.0.0",
   "description": "String to a regex that is diacritic insensitive",
   "main": "./index.js",
   "scripts": {
-    "test": "mocha -R spec test.js",
-    "compile": "tsc -p tsconfig.json"
+    "test": "node_modules/.bin/mocha"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/pocesar/js-diacritic-regex.git"
+    "url": "git+https://github.com/FinalDevStudio/fi-di-regex"
   },
   "devDependencies": {
-    "mocha": "^3.0.2",
-    "chai": "^3.5.0",
-    "typescript": "^1.8.10"
+    "chai": "^4.1.2",
+    "mocha": "^4.0.1"
   },
   "keywords": [
     "diacritic",
@@ -23,11 +21,17 @@
     "ascii",
     "collation"
   ],
-  "author": "Paulo Cesar <https://github.com/pocesar>",
+  "authors": [
+    "Final Development Studio <sorcery@finaldevstudio.com>",
+    "Paulo Cesar <https://github.com/pocesar>"
+  ],
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/pocesar/js-diacritic-regex/issues"
+    "url": "https://github.com/FinalDevStudio/fi-di-regex/issues"
   },
-  "typings": "./index.d.ts",
-  "homepage": "https://github.com/pocesar/js-diacritic-regex#readme"
+  "homepage": "https://github.com/FinalDevStudio/fi-di-regex#readme",
+  "directories": {
+    "lib": "lib",
+    "test": "test"
+  }
 }
